Fix reset button vertical alignment – align-self:flex-end + justify-content:flex-end

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -113,6 +113,8 @@
 
 .pmp-filter-btns {
   flex: 0 0 auto;
+  justify-content: flex-end;
+  align-self: flex-end;
 }
 
 .pmp-btn-reset {
